Short term fix for MESOS-1866.

Review: https://reviews.apache.org/r/26400